# final-project

./: README.md  main.py  pyproject.toml  פרויקט גמר בקורס פייתון למתקדמים.docx
src/: cleaned_relevant_data.csv  data_analysis.py  data_cleaning.py
test/: test_analysis.py  test_cleaning.py
