[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mice_expression_proteins"
requires-python = ">=3.10"
version = "0.1"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "jupyterlab",
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "build",
    "flutter",
    "fastapi"
]

[project.optional-dependencies]
dev = [
    "tox",
    "black",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "jupyterlab",
    "neuro_app_demo[lint]",
    "neuro_app_demo[test]",
    "neuro_app_demo[doc]",
    "neuro_app_demo[build]"
]
lint = [
    "mypy",
    "ruff"
]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "coverage[toml]==7.3.1",
    "pytest-html==4.1.1"
]
doc = [
    "sphinx",
    "furo",
    "sphinx-autodoc-typehints"
]
build = [
    "build>=1.2.2"
]

[tool.ruff]
line-length = 120
src = ["src"]
extend-exclude = [
    "conf.py"
]
target-version = "py310"
lint.select = ["ALL"]
lint.ignore = [
    "COM812",
    "ISC001",
    "ANN101",
    "PT001",
    "PT004",
    "PT005",
    "PT023",
    "D415",
    "D416"
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101",
    "D103"
]
"**/__init__.py" = [
    "F401",
    "F403",
    "D104"
]
"docs/**" = [
    "INP001"
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disallow_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "neuro_app_demo-\\d+",
    "venv.*/",
    "build/",
    "dist/"
]
